--- a/WEB-INF/src/app.properties
+++ b/WEB-INF/src/app.properties
@@ -1,32 +1,33 @@
 #\u753b\u9762\u6a29\u9650
 #\u753b\u9762\u3092\u898b\u308c\u308b\u691c\u773c\u304c\u3042\u308b\u30ed\u30fc\u30eb\u306e\u30ed\u30fc\u30ebID\u3092CSV\u3067\u8a18\u8ff0
 #\u8a18\u8f09\u304c\u7121\u3044\u5834\u5408\u306f\u5168\u3066\u306e\u30ed\u30fc\u30eb\u304c\u898b\u308c\u308b
-display1=
-display2=
-display3=
-display4=
-display5=
-display6=
-display7=
-display8=
-display9=
-display10=
-display11=
-display12=
-display13=
-display14=
-display15=
-display16=
-display17=
-display18=
-display19=
-display20=
-display21=
-display22=
-display23=
-display24=
-display25=
-display26=
+display00001=0,1,2
+display00002=0
+display00003=1
+display00004=2
+display00101=0
+display00102=0
+display00201=0,1
+display00202=0,1
+display00301=0,1
+display00302=0,1
+display00401=0,1
+display00402=0,1
+display00501=1
+display00502=1
+display00503=1
+display00601=1
+display00602=1
+display00603=1
+display00701=1
+display00801=1,2
+display00802=2
+display00803=2
+display00804=2
+display00901=1,2
+display00902=1,2
+display00903=1,2
+
 
 # \u30d1\u30b9\u30ef\u30fc\u30c9\u95a2\u9023
 password.policy=
@@ -35,6 +36,6 @@ pwd.hash.salt=ncTnb6CjKZSQ
 password.expiry=
 
 #\u5b9f\u884c\u30af\u30e9\u30b9\u95a2\u9023
-verify.class=
-verify.result.table.name=
+judge.class=jp.ac.asojuku.asolearning.judge.JavaProgramJudge
+judge.result.table.name=
 
