--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,9 @@
 	<classpathentry kind="lib" path="WEB-INF/lib/logback-classic-1.1.3.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/logback-core-1.1.3.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/slf4j-api-1.7.12.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jackson-annotations-2.8.0.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jackson-core-2.8.1.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jackson-databind-2.8.5.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/servlet-api.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/jasper.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/jsp-api.jar"/>
