--- a/WEB-INF/classes/app.properties
+++ b/WEB-INF/classes/app.properties
@@ -39,3 +39,7 @@ password.expiry=
 judge.class=jp.ac.asojuku.asolearning.judge.JavaProgramJudge
 judge.result.table.name=
 
+#\u30d5\u30a9\u30eb\u30c0\u95a2\u9023
+upload.directory=C:/work/upload
+shell.path=C:/batch/test.bat
+
