--- a/WEB-INF/src/app.properties
+++ b/WEB-INF/src/app.properties
@@ -42,4 +42,5 @@ judge.result.table.name=
 #\u30d5\u30a9\u30eb\u30c0\u95a2\u9023
 upload.directory=C:/work/upload
 shell.path=C:/batch/test.bat
+result.directory=C:/work/result
 
