--- a/WEB-INF/classes/app.properties
+++ b/WEB-INF/classes/app.properties
@@ -43,4 +43,5 @@ judge.result.table.name=
 upload.directory=C:/work/upload
 shell.path=C:/batch/test.bat
 result.directory=C:/work/result
+answer.directory=C:/work/answer
 
