--- a/WEB-INF/classes/app.properties
+++ b/WEB-INF/classes/app.properties
@@ -44,4 +44,6 @@ upload.directory=C:/work/upload
 shell.path=C:/batch/test.bat
 result.directory=C:/work/result
 answer.directory=C:/work/answer
+input.directory=C:/work/input
+temp.directory=C:/work/temp
 
