--- a/linux_setting/app.properties
+++ b/linux_setting/app.properties
@@ -7,10 +7,10 @@ display00003=1
 display00004=2
 display00101=0,2
 display00102=0
-display00201=0,1,2
-display00202=0,1,2
-display00301=0,1,2
-display00302=0,1,2
+display00201=0,1
+display00202=0,1
+display00301=0,1
+display00302=0,1
 display00401=0,1
 display00402=0,1
 display00501=1
@@ -40,10 +40,10 @@ judge.class=jp.ac.asojuku.asolearning.judge.JavaProgramJudge
 judge.result.table.name=
 
 #\u30d5\u30a9\u30eb\u30c0\u95a2\u9023
-upload.directory=C:/work/upload
-shell.path=C:/batch/test.bat
-result.directory=C:/work/result
-answer.directory=C:/work/answer
-input.directory=C:/work/input
-temp.directory=C:/work/temp
+upload.directory=/data/upload
+shell.path=/data/batch/judge.sh
+result.directory=/data/result
+answer.directory=/data/answer
+input.directory=/data/input
+temp.directory=/data/temp
 
