--- a/WEB-INF/classes/message.properties
+++ b/WEB-INF/classes/message.properties
@@ -1,6 +1,8 @@
 
 #\u30ed\u30b0\u30a4\u30f3\u30a8\u30e9\u30fc
 login.err.loginerr=\u30ed\u30b0\u30a4\u30f3ID\u304c\u5b58\u5728\u3057\u306a\u3044\u304b\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u9593\u9055\u3063\u3066\u3044\u307e\u3059
+#\u30ed\u30b0\u30a2\u30a6\u30c8
+logout.msg=\u30ed\u30b0\u30a2\u30a6\u30c8\u3057\u307e\u3057\u305f
 # \u5224\u5b9a\u7d50\u679c\u306e\u30e1\u30c3\u30bb\u30fc\u30b8
 judge.result.not.match=\u51fa\u529b\u7d50\u679c\u304c\u6b63\u3057\u304f\u3042\u308a\u307e\u305b\u3093
 # \u3053\u3053\u3088\u308a\u4e0b\u306b\u8a18\u8f09\u3055\u308c\u3066\u3044\u308b\u306e\u306f \u300cerrmsg+\u30a8\u30e9\u30fc\u30b3\u30fc\u30c9\u300d\u306e\u30d5\u30a9\u30fc\u30de\u30c3\u30c8\u3067
