--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 	<echo message="written by n.nishino 2017.02.04"/>
 	<echo message="=================================================="/>
     <property environment="env"/>
-    <property name="TOMCAT_HOME" value="C:\apache-tomcat-7.0.61"/>
+    <property name="TOMCAT_HOME" value="C:\NAO\apache-tomcat-7.0.61"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
@@ -36,6 +36,7 @@
         <mkdir dir="war/build"/>
         <mkdir dir="war/build/classes"/>
         <mkdir dir="war/build/view"/>
+        <mkdir dir="war/build/tmp"/>
     	<echo message="${ant.project.name}: ${ant.file}"/>
 
     	<javac debug="true" debuglevel="${debuglevel}" destdir="war/build/classes" includeantruntime="false" source="${source}" target="${target}">
@@ -43,7 +44,8 @@
             <classpath refid="build.lib"/>
         </javac>
     	<copy todir="war/build/classes">
-    		 <fileset dir="WEB-INF/src/" includes="*.properties"/>
+    		 <fileset dir="WEB-INF/src/" includes="message.properties"/>
+   		 	 <fileset dir="linux_setting/" includes="app.properties"/>
    		 	 <fileset dir="WEB-INF/src/" includes="*.xml"/>
     	</copy>
     	<copy todir="war/build/view">
@@ -57,6 +59,8 @@
     		<lib dir="WEB-INF/lib" />
     		<zipfileset dir="view"
             prefix="view"/>
+    		<zipfileset dir="WEB-INF/tmp"
+            prefix="WEB-INF/tmp"/>
     	</war>
         <delete dir="war/build"/>
     </target>
