2017/02/21学校作業分

--- a/WEB-INF/classes/app.properties
+++ b/WEB-INF/classes/app.properties
@@ -27,6 +27,10 @@ display00804=2
 display00901=1,2
 display00902=1,2
 display00903=1,2
+display01001=2
+display01101=1,2
+display01102=1,2
+display01103=1,2
 
 
 # \u30d1\u30b9\u30ef\u30fc\u30c9\u95a2\u9023
