2/25 入力ファイル2つの時の不具合修正 課題DTOなどの李ファクタ 課題検索画面作成

--- a/WEB-INF/classes/app.properties
+++ b/WEB-INF/classes/app.properties
@@ -19,6 +19,7 @@ display00503=1,2
 display00601=1,2
 display00602=1,2
 display00603=1,2
+display00604=1,2
 display00701=1,2
 display00801=1,2
 display00802=2
