--- a/linux_setting/app.properties
+++ b/linux_setting/app.properties
@@ -19,6 +19,7 @@ display00503=1,2
 display00601=1,2
 display00602=1,2
 display00603=1,2
+display00604=1,2
 display00701=1,2
 display00801=1,2
 display00802=2
@@ -31,8 +32,6 @@ display01001=2
 display01101=1,2
 display01102=1,2
 display01103=1,2
-
-
 
 # \u30d1\u30b9\u30ef\u30fc\u30c9\u95a2\u9023
 password.policy=
