--- a/WEB-INF/classes/app.properties
+++ b/WEB-INF/classes/app.properties
@@ -38,6 +38,7 @@ password.policy=
 force.pass.change=
 pwd.hash.salt=ncTnb6CjKZSQ
 password.expiry=
+pwd.lock.limit=2
 
 # \u30cb\u30c3\u30af\u30cd\u30fc\u30e0\u306e\u6697\u53f7\u30ad\u30fc\u306e\u4e00\u90e8
 nickname.enc.ky=Cu6Ua2ve
