--- a/linux_setting/app.properties
+++ b/linux_setting/app.properties
@@ -38,6 +38,11 @@ password.policy=
 force.pass.change=
 pwd.hash.salt=ncTnb6CjKZSQ
 password.expiry=
+pwd.lock.limit=
+
+# \u30cb\u30c3\u30af\u30cd\u30fc\u30e0\u306e\u6697\u53f7\u30ad\u30fc\u306e\u4e00\u90e8
+nickname.enc.ky=Cu6Ua2ve
+nickname.enc.iv=Qt2E6PFpMr9L8iTs
 
 #\u5b9f\u884c\u30af\u30e9\u30b9\u95a2\u9023
 judge.class=jp.ac.asojuku.asolearning.judge.JavaProgramJudge
