--- a/WEB-INF/src/message.properties
+++ b/WEB-INF/src/message.properties
@@ -1,6 +1,7 @@
 
 #\u30ed\u30b0\u30a4\u30f3\u30a8\u30e9\u30fc
 login.err.loginerr=\u30ed\u30b0\u30a4\u30f3ID\u304c\u5b58\u5728\u3057\u306a\u3044\u304b\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u9593\u9055\u3063\u3066\u3044\u307e\u3059
+login.err.lock=\u30a2\u30ab\u30a6\u30f3\u30c8\u304c\u30ed\u30c3\u30af\u3057\u3066\u3044\u307e\u3059
 #\u30ed\u30b0\u30a2\u30a6\u30c8
 logout.msg=\u30ed\u30b0\u30a2\u30a6\u30c8\u3057\u307e\u3057\u305f
 # \u5224\u5b9a\u7d50\u679c\u306e\u30e1\u30c3\u30bb\u30fc\u30b8
