--- a/WEB-INF/classes/message.properties
+++ b/WEB-INF/classes/message.properties
@@ -6,6 +6,10 @@ login.err.lock=\u30a2\u30ab\u30a6\u30f3\u30c8\u304c\u30ed\u30c3\u30af\u3057\u306
 logout.msg=\u30ed\u30b0\u30a2\u30a6\u30c8\u3057\u307e\u3057\u305f
 # \u5224\u5b9a\u7d50\u679c\u306e\u30e1\u30c3\u30bb\u30fc\u30b8
 judge.result.not.match=\u51fa\u529b\u7d50\u679c\u304c\u6b63\u3057\u304f\u3042\u308a\u307e\u305b\u3093
+# \u304a\u77e5\u3089\u305b\u306e\u30e1\u30c3\u30bb\u30fc\u30b8
+info.recent.create=\u8ab2\u984c\u540d\u300c%s\u300d\u304c\u8ffd\u52a0\u3055\u308c\u307e\u3057\u305f\uff01
+info.recent.update=\u8ab2\u984c\u540d\u300c%s\u300d\u304c\u66f4\u65b0\u3055\u308c\u307e\u3057\u305f\uff01
+info.recent.end=\u8ab2\u984c\u540d\u300c%s\u300d\u306f\u7de0\u5207\u304c\u8fd1\u3044\u3067\u3059\u304c\u3001\u307e\u3060\u672a\u63d0\u51fa\u3067\u3059\uff01
 # \u3053\u3053\u3088\u308a\u4e0b\u306b\u8a18\u8f09\u3055\u308c\u3066\u3044\u308b\u306e\u306f \u300cerrmsg+\u30a8\u30e9\u30fc\u30b3\u30fc\u30c9\u300d\u306e\u30d5\u30a9\u30fc\u30de\u30c3\u30c8\u3067
 # \u8a18\u8f09\u3055\u308c\u3066\u3044\u307e\u3059\u3002
 # \u30a8\u30e9\u30fc\u30b3\u30fc\u30c9\u306b\u3064\u3044\u3066\u306f jp.ac.asojuku.bookstore.err.ErrorCode \u3092\u898b\u3066\u304f\u3060\u3055\u3044
