--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 	<echo message="written by n.nishino 2017.02.04"/>
 	<echo message="=================================================="/>
     <property environment="env"/>
-    <property name="TOMCAT_HOME" value="C:\NAO\apache-tomcat-7.0.61"/>
+    <property name="TOMCAT_HOME" value="C:\apache-tomcat-7.0.61"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
@@ -39,7 +39,7 @@
         <mkdir dir="war/build/tmp"/>
     	<echo message="${ant.project.name}: ${ant.file}"/>
 
-    	<javac debug="true" debuglevel="${debuglevel}" destdir="war/build/classes" includeantruntime="false" source="${source}" target="${target}">
+    	<javac encoding="utf-8" debug="true" debuglevel="${debuglevel}" destdir="war/build/classes" includeantruntime="false" source="${source}" target="${target}">
             <src path="WEB-INF/src"/>
             <classpath refid="build.lib"/>
         </javac>
