3/3家作業分 C言語対応 検索不具合修正

--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 	<echo message="written by n.nishino 2017.02.04"/>
 	<echo message="=================================================="/>
     <property environment="env"/>
-    <property name="TOMCAT_HOME" value="C:\apache-tomcat-7.0.61"/>
+    <property name="TOMCAT_HOME" value="C:\NAO\apache-tomcat-7.0.61"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
