--- a/WEB-INF/classes/app.properties
+++ b/WEB-INF/classes/app.properties
@@ -45,7 +45,7 @@ nickname.enc.ky=Cu6Ua2ve
 nickname.enc.iv=Qt2E6PFpMr9L8iTs
 
 #\u5b9f\u884c\u30af\u30e9\u30b9\u95a2\u9023
-judge.class=jp.ac.asojuku.asolearning.judge.JavaProgramJudge
+judge.class=jp.ac.asojuku.asolearning.judge.JavaCProgramJudge
 judge.result.table.name=
 
 #\u30d5\u30a9\u30eb\u30c0\u95a2\u9023
