3/3 学校作業分

--- a/linux_setting/app.properties
+++ b/linux_setting/app.properties
@@ -32,6 +32,8 @@ display01001=2
 display01101=1,2
 display01102=1,2
 display01103=1,2
+display01201=1,2
+display01202=1,2
 
 # \u30d1\u30b9\u30ef\u30fc\u30c9\u95a2\u9023
 password.policy=
@@ -55,4 +57,7 @@ result.directory=/data/result
 answer.directory=/data/answer
 input.directory=/data/input
 temp.directory=/data/temp
+csv.directory=/data/csv
 
+#CSV\u95a2\u9023
+csv.file.encode=Shift_JIS
