--- a/WEB-INF/src/app.properties
+++ b/WEB-INF/src/app.properties
@@ -32,6 +32,8 @@ display01001=2
 display01101=1,2
 display01102=1,2
 display01103=1,2
+display01201=1,2
+display01202=1,2
 
 # \u30d1\u30b9\u30ef\u30fc\u30c9\u95a2\u9023
 password.policy=
@@ -55,4 +57,7 @@ result.directory=C:/work/result
 answer.directory=C:/work/answer
 input.directory=C:/work/input
 temp.directory=C:/work/temp
+csv.directory=C:/work/csv
 
+#CSV\u95a2\u9023
+csv.file.encode=Shift_JIS
