3/13家作業　ランキングについて難易度によって点数の係数をかけるように修正

--- a/linux_setting/app.properties
+++ b/linux_setting/app.properties
@@ -61,3 +61,8 @@ csv.directory=/data/csv
 
 #CSV\u95a2\u9023
 csv.file.encode=Shift_JIS
+
+#\u30e9\u30f3\u30ad\u30f3\u30b0
+ranking.offset.easy=1.0
+ranking.offset.normal=1.0
+ranking.offset.diffical=1.0
