--- a/WEB-INF/src/app.properties
+++ b/WEB-INF/src/app.properties
@@ -69,3 +69,6 @@ csv.file.encode=Shift_JIS
 ranking.offset.easy=1.0
 ranking.offset.normal=1.0
 ranking.offset.diffical=1.0
+
+#DB\u95a2\u9023
+db.connect.string=java:comp/env/jdbc/asolearning
