--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 	<echo message="written by n.nishino 2017.02.04"/>
 	<echo message="=================================================="/>
     <property environment="env"/>
-    <property name="TOMCAT_HOME" value="C:\NAO\apache-tomcat-7.0.61"/>
+    <property name="TOMCAT_HOME" value="C:\apache-tomcat-7.0.61"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
@@ -53,8 +53,43 @@
     	</copy>
 
     </target>
+
+    <target depends="clean" name="build-staging">
+        <mkdir dir="war/build"/>
+        <mkdir dir="war/build/classes"/>
+        <mkdir dir="war/build/view"/>
+        <mkdir dir="war/build/tmp"/>
+    	<echo message="${ant.project.name}: ${ant.file}"/>
+
+    	<javac encoding="utf-8" debug="true" debuglevel="${debuglevel}" destdir="war/build/classes" includeantruntime="false" source="${source}" target="${target}">
+            <src path="WEB-INF/src"/>
+            <classpath refid="build.lib"/>
+        </javac>
+    	<copy todir="war/build/classes">
+    		 <fileset dir="WEB-INF/src/" includes="message.properties"/>
+   		 	 <fileset dir="staging_setting" includes="app.properties"/>
+   		 	 <fileset dir="WEB-INF/src/" includes="*.xml"/>
+    	</copy>
+    	<copy todir="war/build/view">
+    		 <fileset dir="view" includes="**/*.*"/>
+    	</copy>
+
+    </target>
+
     <target depends="build"  name="make-war">
     	<war destfile="war/${ant.project.name}.war" needxmlfile='false' >
+    		<classes dir="war/build/classes" />
+    		<lib dir="WEB-INF/lib" />
+    		<zipfileset dir="view"
+            prefix="view"/>
+    		<zipfileset dir="WEB-INF/tmp"
+            prefix="WEB-INF/tmp"/>
+    	</war>
+        <delete dir="war/build"/>
+    </target>
+
+    <target depends="build-staging"  name="make-war-for-staging">
+    	<war destfile="war/st${ant.project.name}.war" needxmlfile='false' >
     		<classes dir="war/build/classes" />
     		<lib dir="WEB-INF/lib" />
     		<zipfileset dir="view"
