--- a/event_setting/app.properties
+++ b/event_setting/app.properties
@@ -64,6 +64,7 @@ answer.directory=/dataForEvent/answer
 input.directory=/dataForEvent/input
 temp.directory=/dataForEvent/temp
 csv.directory=/dataForEvent/csv
+jsp.directory=WEB-INF/jsp/
 
 #CSV\u95a2\u9023
 csv.file.encode=Shift_JIS
