--- a/staging_setting/app.properties
+++ b/staging_setting/app.properties
@@ -64,6 +64,7 @@ answer.directory=/data/answer
 input.directory=/data/input
 temp.directory=/data/temp
 csv.directory=/data/csv
+jsp.directory=WEB-INF/jsp/
 
 #CSV\u95a2\u9023
 csv.file.encode=Shift_JIS
