不具合修正　アップデート.xlsx　のNo.13

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,7 @@
 eclipse.preferences.version=1
 encoding//\u8A2D\u8A08\u66F8/2017\u5E748\u6708\u30A2\u30C3\u30D7\u30C7\u30FC\u30C8.txt=MS932
+encoding//\u8A2D\u8A08\u66F8/\u74B0\u5883\u69CB\u7BC9/AZCafe\u65B0\u30B5\u30FC\u30D0\u30FC\u69CB\u7BC9\u30ED\u30B0.log=MS932
+encoding//\u8A2D\u8A08\u66F8/\u74B0\u5883\u69CB\u7BC9/AZCafe\u65B0\u30B5\u30FC\u30D0\u30FC\u69CB\u7BC9\u30ED\u30B0\uFF12.log=MS932
+encoding//\u8A2D\u8A08\u66F8/\u74B0\u5883\u69CB\u7BC9/AZCafe\u65B0\u30B5\u30FC\u30D0\u30FC\u69CB\u7BC9\u30ED\u30B0\uFF13.log=MS932
+encoding//\u8A2D\u8A08\u66F8/\u74B0\u5883\u69CB\u7BC9/AZCafe\u65B0\u30B5\u30FC\u30D0\u30FC\u69CB\u7BC9\u30ED\u30B0\uFF14.log=MS932
+encoding//\u8A2D\u8A08\u66F8/\u74B0\u5883\u69CB\u7BC9/AZCafe\u65B0\u30B5\u30FC\u30D0\u30FC\u69CB\u7BC9\u30ED\u30B0\uFF15.log=MS932
