--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 	<echo message="written by n.nishino 2017.02.04"/>
 	<echo message="=================================================="/>
     <property environment="env"/>
-    <property name="TOMCAT_HOME" value="C:\apache-tomcat-7.0.61"/>
+    <property name="TOMCAT_HOME" value="C:\pleiades\tomcat\7"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="WebContent" value="WebContent"/>
     <property name="target" value="1.8"/>
